# claude-ops

./: .claudeignore  .completion-monitor.pid  .env.example  .env.sample  .gitattributes  .gitignore  .last_session_states  .task_mapping.json  2025-07-22-command-messageinit-is-analyzing-your-codebase.txt  2_download_dbs.sh  CHANGELOG.md  CLAUDE-OPS.md  CLAUDE.md  MECE_VERIFICATION_REPORT.md  MECE_test_report.md  MULTI_USER_GUIDE.md  NEXT_SESSION_CONTEXT.md  QUICK_START.md  README.md  RESTRUCTURE_PLAN.md  TODOS.md  architecture.md  check_task_status.py  claude.md  claude_tmux_manager.sh  cleanup_plan.md  data_collection_report.txt  dummy_samplesheet.csv  experiment-log.md  fix_task_status.py  improve_archive_cleaning.py  init.sh  install-bridge.sh  install-to-existing.sh  install.sh  main.py  metrics.json  monitor.log.legacy  monitoring_test_results.json  multi_session_plan.md  (+22 more)
.claude/: .version  commands  setting.json  settings.json
.claude/commands/: analyze.md  complete.md  context.md  deploy.md  extreme.md  fullcycle-beta.md  fullcycle.md  implement.md  plan-safe.md  plan.md  plandev.md  quality.md  repoclean.md  stabilize.md  validate.md  weekly.md  구현.md  기획-safe.md  기획.md  기획구현.md  레포정리.md  문서정리.md  문서화.md  배포.md  전체사이클.md  주간보고.md
.claude/commands.backup.20250823_024026/: 기획.md  배포.md  안정화.md
.claude/commands.backup.20250831_015918/: complete.md  context.md  docsorg.md  plan.md  검증.md  극한검증.md  기획-safe.md
.claude/commands.backup.20250831_020308/: 기획구현.md  안정화.md  품질보증.md
.claude/hooks/: bash_feedback.sh  export_sanitize.sh
.github/workflows/: ci.yml  tadd-enforcement.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.tadd/: config.yml
claude-telegram-bridge-package/: LICENSE  README.md  pyproject.toml
claude-telegram-bridge-package/claude_telegram_bridge/: __init__.py  __main__.py  config.py  notifier.py  telegram_bot.py
claude_bridge/: README.md  __init__.py  __main__.py  monitor.py  requirements.txt
claude_ctb/: __init__.py  config.py  project_creator.py  session_manager.py
claude_ctb/hooks/: clear_notification_state.sh  hook_notify.py  notify_telegram.sh
claude_ctb/monitoring/: __init__.py  completion_event_system.py  dashboard.py  missed_case_analyzer.py  multi_monitor.py
claude_ctb/telegram/: __init__.py  bot.py  command_picker.py  dangerous_commands.py  file_handlers.py  inline_monitor.py  keyboard_handler.py  message_queue.py  message_utils.py  notifier.py  session_action_handlers.py
claude_ctb/ui/: inline_panel.py  persistent_panel.py
claude_ctb/utils/: busy_markers.txt  log_length_manager.py  notification_debugger.py  (+12 more)
claude_ops/: __init__.py  config.py  hook_manager.py  project_creator.py  prompt_loader.py  session_manager.py
config/: hybrid_monitoring.json
ctb-dashboard/: .env.example  LICENSE  P1_SMOKE.md  README.md  pyproject.toml
ctb-dashboard/src/ctb_dashboard/: __init__.py  notifications.py  reject_drafts.py  review.py  server.py  session_delete.py  sessions.py  state_detector.py  ticket_enrichment.py  ticket_overlay.py
ctb-dashboard/src/ctb_dashboard/static/: index.html  manifest.json  sw.js
ctb-dashboard/src/ctb_dashboard/templates/: dev_cards.html  index.html  review.html
ctb-dashboard/src/ctb_dashboard/templates/components/: card.html
ctb-dashboard/tests/: test_card_component.py  test_email_dispatch.py  test_notification_deadlock.py  test_reject_drafts.py  test_review_route.py  test_review_state.py  test_session_badge_api.py  test_session_delete.py  test_session_state_parity.py  test_sessions.py  test_state_detector.py  test_ticket_enrichment.py  test_ticket_overlay.py
data/: README.md  metadata.csv  sample_data.csv
docs/: CONSERVATIVE_DETECTION_GUIDE.md  FIX_REMOTE_ISSUE.md  README.md  ROADMAP-MCP-SUBAGENT.md  TEMPLATE_USAGE.md  prd_telegram_message_limits.md  session-state-architecture-verification.md  test_run.md
examples/: README.md  basic_usage.py
outputs/: MANIFEST.yaml
prompts/: 1_philosophy_knowledge_creation.md  2_create_project_plan.md  3_generate_pr_description.md  4_publish_to_knowledge_hub.md
scripts/: check_api_compatibility.py  check_status.sh  claude-bridge  claude-ops.sh  claude-telegram-bridge  compare_results.py  completion-monitor.sh  comprehensive_test_validator.py  ctb  detect_mock_usage.py  hook-notification.sh  new-project.sh  notification_monitor.py  quick_tadd_check.sh  send-completion-notification.sh  setup-hooks.sh  setup-user.sh  setup_hooks.sh  start_monitoring.sh  start_multi_monitoring.sh  start_telegram_bridge.sh  stop_telegram_bridge.sh  verify_tadd_order.py
slash_commands/: project-plan.md  task-archive.md  task-finish.md  task-start.md
src/: main.nf  nextflow.config  workflow_manager.py
tadd/: __init__.py  document_generator.py  prd_manager.py  session_archiver.py  task_manager.py
tests/: conftest.py  test_active_session_highlighting.py  test_bot_core.py  test_compact_detector.py  test_compact_improvements.py  test_completion_time_recording.py  test_config.py  test_conservative_detection.py  test_conservative_integration.py  test_context_display_spec.py  test_context_limit_auto_restart.py  test_esc_interrupt_false_positive_fix.py  test_esc_interrupt_notification_bug.py  test_false_positive_detection_fix.py  test_false_positive_integration.py  test_inline_panel_integration.py  test_log_length_manager.py  test_new_prompt_ui_format.py  test_notification_detection_improvements.py  test_notification_fixes_spec.py  test_notification_summary_inconsistency.py  test_persistent_panel.py  test_progress_tracker.py  test_project_creator_claude_dev_kit_compat.py  test_prompt_detection_edge_cases.py  test_prompt_priority_fix.py  test_remote_control_idle.py  test_resume_actions.py  test_session_manager_worktree.py  test_session_name_normalization.py  test_session_state.py  test_session_tracking_fix_spec.py  test_stall_detection.py  test_summary_improvements.py  test_tadd_integration.py  test_task_completion_detector.py  test_telegram_message_limits.py  test_wait_time_drift.py  test_wait_time_edge_cases.py  test_wait_time_tracker_v2.py
(+197 files in other folders)
