[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-telegram-bridge"
version = "2.0.1"
description = "Telegram-Claude Code Bridge System for remote monitoring and control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.8.0",
    "numpy>=1.21.0",
    "openpyxl>=3.1.5",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "rdkit-pypi>=2022.9.5",
    "requests>=2.25.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.12.0",
    "streamlit>=1.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ctb-dashboard = "claude_ctb.web_dashboard.server:run_server"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "requires_tmux: marks tests that require a running tmux server",
    "requires_telegram: marks tests that require Telegram bot credentials (TELEGRAM_BOT_TOKEN)",
]

[tool.setuptools]
packages = ["claude_ctb", "tadd"]
