[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctb-dashboard"
version = "0.1.0"
description = "Real-time Claude Code session monitoring dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
    "jinja2>=3.1.6",
]

[project.urls]
Homepage = "https://github.com/kyuwon-shim-ARL/claude-ops/tree/main/ctb-dashboard"
Repository = "https://github.com/kyuwon-shim-ARL/claude-ops"
"Bug Tracker" = "https://github.com/kyuwon-shim-ARL/claude-ops/issues"

[project.scripts]
ctb-dashboard = "ctb_dashboard.server:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ctb_dashboard = ["static/*"]
